--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
+
+    <!-- AOS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css" />
 
@@ -47,10 +51,10 @@
               <a class="nav-link" href="#contact">Contacts</a>
             </li>
           </ul>
-          <form class="d-flex">
+          <!-- <form class="d-flex">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
             <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
+          </form> -->
         </div>
       </div>
     </nav>
@@ -58,11 +62,9 @@
 
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
-      <img src="img/rendra.JPG" alt="Rendra Dermawan" width="200" class="rounded-circle img-thumbnail shadow-sm" />
-      <h1 class="display-4 fw-bold">Blinducation</h1>
-      <p class="lead">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos minima autem doloremque iusto dolores similique tempore! Dolorum fugiat maiores sed provident, eaque, ipsam libero sint nesciunt velit amet, iste sapiente!
-      </p>
+      <img src="img/rendra.JPG" alt="Rendra Dermawan" width="200" class="rounded-circle img-thumbnail shadow-sm" data-aos="flip-left" />
+      <h1 class="display-4 fw-bold" data-aos="fade-up" data-aos-duration="1000">Blinducation</h1>
+      <p class="lead" data-aos="fade-in"></p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,160L480,128L960,288L1440,64L1440,320L960,320L480,320L0,320Z"></path></svg>
     </section>
     <!-- Akhir Jumbo Tron -->
@@ -71,15 +73,15 @@
     <section id="About">
       <div class="container">
         <div class="row">
-          <div class="col text-center mb-3">
+          <div class="col text-center mb-3" data-aos="fade-down" data-aos-duration="1000">
             <h2>About Me</h2>
           </div>
         </div>
         <div class="row justify-content-center">
-          <div class="col-md-4 fs-5 text-center">
+          <div class="col-md-4 fs-5 text-center" data-aos="fade-right" data-aos-duration="2000">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus quia et suscipit earum amet ipsam nihil itaque tempora beatae temporibus.</p>
           </div>
-          <div class="col-md-4 fs-5 text-center">
+          <div class="col-md-4 fs-5 text-center" data-aos="fade-left" data-aos-duration="1000">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas voluptates repellendus eius distinctio ducimus optio quam quasi iure velit tempora.</p>
           </div>
         </div>
@@ -92,21 +94,20 @@
     <section id="projects">
       <div class="container">
         <div class="row text-center mb-3">
-          <div class="col">
+          <div class="col" data-aos="fade-down" data-aos-duration="2000">
             <h2>My Projects</h2>
           </div>
         </div>
         <div class="row">
-          <div class="col-md-4 mb-3">
-            <div class="card wow fadeIn" data-wow-delay="0.6s">
+          <div class="col-md-4 mb-3" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="50">
+            <div class="card">
               <img src="img/card-1.jpg" class="card-img-top img-thumbnail" alt="Garut" />
-              <!-- <a href="img/card-1.jpg" data-lightbox-gallery="gallery-gallery"><img src="img/card-1.jpg" alt="gallery img" /></a> -->
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-3">
+          <div class="col-md-4 mb-3" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="250">
             <div class="card">
               <img src="img/card-2.jpg" class="card-img-top img-thumbnail" alt="Soreang" />
               <div class="card-body">
@@ -114,7 +115,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-3">
+          <div class="col-md-4 mb-3" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="400">
             <div class="card">
               <img src="img/card-3.jpg" class="card-img-top img-thumbnail" alt="Pangalengan" />
               <div class="card-body">
@@ -132,26 +133,34 @@
     <section id="contact">
       <div class="container">
         <div class="row text-center mb-3">
-          <div class="col">
+          <div class="col" data-aos="fade-down" data-aos-duration="2000">
             <h2>Contact Me</h2>
           </div>
         </div>
         <div class="row justify-content-center">
           <div class="col-md-8">
-            <form>
-              <div class="mb-3">
+            <div class="alert alert-success alert-dismissible fade show d-none my-alert" role="alert">
+              <strong>Terima Kasih.</strong> Pesan anda telah kami terima.
+              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+            <form name="contact-form">
+              <div class="mb-3" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="50">
                 <label for="name" class="form-label">Name</label>
-                <input type="text" class="form-control" id="name" aria-describedby="emailHelp" />
+                <input type="text" class="form-control" id="name" aria-describedby="name" name="nama" />
               </div>
-              <div class="mb-3">
-                <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" aria-describedby="email" />
+              <div class="mb-3" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="250">
+                <label for="email" class="form-label" data-aos="fade-up">Email</label>
+                <input type="email" class="form-control" id="email" aria-describedby="email" name="email" />
               </div>
-              <div class="mb-3">
+              <div class="mb-3" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="400">
                 <label for="message" class="form-label">Message</label>
-                <textarea class="form-control" id="message" rows="3"></textarea>
+                <textarea class="form-control" id="message" rows="3" name="pesan"></textarea>
               </div>
-              <button type="submit" class="btn btn-success">Kirim</button>
+              <button type="submit" class="btn btn-success btn-kirim" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="400">Kirim</button>
+              <button class="btn btn-success btn-loading d-none" type="button" disabled>
+                <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                Loading...
+              </button>
             </form>
           </div>
         </div>
@@ -167,8 +176,53 @@
     <!-- Akhir Footer -->
 
     <!-- Optional JavaScript; choose one of the two! -->
+    <!-- AOS -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        once: true,
+        duration: 2000,
+      });
+    </script>
+
+    <!-- GSAP -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/TextPlugin.min.js"></script>
+    <script>
+      gsap.registerPlugin(TextPlugin);
+      gsap.to(".lead", { duration: 2, delay: 1.5, text: "Photography | Videography" });
+      gsap.to(".jumbotron img", { duration: 1, rotateY: 360, opacity: 100 });
+      gsap.from(".navbar", { duration: 1, y: "-100%", opacity: 0, ease: "bounce" });
+    </script>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script>
+      const scriptURL = "https://script.google.com/macros/s/AKfycbzWZJCZSD_coYPBMtL6dPVGA8Gf1EopnGZmYnheqUZ1klKio4Ajk6Rg2zQzYLznMkBkng/exec";
+      const form = document.forms["contact-form"];
+      const btnKirim = document.querySelector(".btn-kirim");
+      const btnLoading = document.querySelector(".btn-loading");
+      const myAlert = document.querySelector(".my-alert");
+
+      form.addEventListener("submit", (e) => {
+        e.preventDefault();
+        // Ketika tombol kirim diklik
+        // Tampilkan tombol loading, sembunyikan tombol kirim
+        btnLoading.classList.toggle("d-none");
+        btnKirim.classList.toggle("d-none");
+        fetch(scriptURL, { method: "POST", body: new FormData(form) })
+          .then((response) => {
+            // Tampilkan tombol loading, sembunyikan tombol kirim
+            btnLoading.classList.toggle("d-none");
+            btnKirim.classList.toggle("d-none");
+            // Tampilkan alert
+            myAlert.classList.toggle("d-none");
+            // Kosongkan Form
+            form.reset();
+            console.log("Success!", response);
+          })
+          .catch((error) => console.error("Error!", error.message));
+      });
+    </script>
   </body>
 </html>
