--- a/index.html
+++ b/index.html
@@ -149,6 +149,10 @@
                 <input type="text" class="form-control" id="name" aria-describedby="name" name="nama" />
               </div>
               <div class="mb-3" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="250">
+                <label for="phone" class="form-label" data-aos="fade-up">Phone Number</label>
+                <input type="number" class="form-control" id="phone" aria-describedby="phone" name="phone" />
+              </div>
+              <div class="mb-3" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="250">
                 <label for="email" class="form-label" data-aos="fade-up">Email</label>
                 <input type="email" class="form-control" id="email" aria-describedby="email" name="email" />
               </div>
