--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Projects </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#projects">Photography</a></li>
-                <li><a class="dropdown-item" href="#">Videography</a></li>
+                <li><a class="dropdown-item" href="#Photography">Photography</a></li>
+                <li><a class="dropdown-item" href="#Videography">Videography</a></li>
                 <li><hr class="dropdown-divider" /></li>
                 <li><a class="dropdown-item" href="#">Others</a></li>
               </ul>
@@ -91,11 +91,11 @@
     <!-- Akhir About -->
 
     <!-- Projects -->
-    <section id="projects">
+    <section id="Photography">
       <div class="container">
         <div class="row text-center mb-3">
           <div class="col" data-aos="fade-down" data-aos-duration="2000">
-            <h2>My Projects</h2>
+            <h2>Photography</h2>
           </div>
         </div>
         <div class="row">
@@ -127,7 +127,70 @@
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,64L480,224L960,160L1440,224L1440,320L960,320L480,320L0,320Z"></path></svg>
     </section>
-    <!-- Akhir Projects -->
+    <section id="Videography">
+      <div class="container">
+        <div class="row text-center mb-3">
+          <div class="col" data-aos="fade-down" data-aos-duration="2000">
+            <h2>Videography</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 mb-3" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="50">
+            <div class="card">
+              <iframe
+                width="885"
+                height="498"
+                src="https://www.youtube.com/embed/0gcMDdEbd1k"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+                class="card-img-top img-thumbnail"
+              ></iframe>
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="250">
+            <div class="card">
+              <iframe
+                width="885"
+                height="498"
+                src="https://www.youtube.com/embed/xZx1PmXe9vs"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+                class="card-img-top img-thumbnail"
+              ></iframe>
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="400">
+            <div class="card">
+              <iframe
+                width="885"
+                height="498"
+                src="https://www.youtube.com/embed/rtJMz-i3Mzc"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+                class="card-img-top img-thumbnail"
+              ></iframe>
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,64L480,224L960,160L1440,224L1440,320L960,320L480,320L0,320Z"></path></svg>
+    </section>
+    <!-- Akhir Videography -->
 
     <!-- Contact -->
     <section id="contact">
@@ -139,7 +202,6 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-md-8">
-<<<<<<< HEAD
             <div class="alert alert-success alert-dismissible fade show d-none my-alert" role="alert">
               <strong>Terima Kasih.</strong> Pesan anda telah kami terima.
               <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
@@ -166,22 +228,6 @@
                 <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
                 Loading...
               </button>
-=======
-            <form>
-              <div class="mb-3" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="50">
-                <label for="name" class="form-label">Name</label>
-                <input type="text" class="form-control" id="name" aria-describedby="emailHelp" />
-              </div>
-              <div class="mb-3" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="250">
-                <label for="email" class="form-label" data-aos="fade-up">Email</label>
-                <input type="email" class="form-control" id="email" aria-describedby="email" />
-              </div>
-              <div class="mb-3" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="400">
-                <label for="message" class="form-label">Message</label>
-                <textarea class="form-control" id="message" rows="3"></textarea>
-              </div>
-              <button type="submit" class="btn btn-success" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="400">Kirim</button>
->>>>>>> 483cd6d (Perubahan AOS & GSAP)
             </form>
           </div>
         </div>
@@ -196,7 +242,7 @@
     </footer>
     <!-- Akhir Footer -->
 
-    <!-- Optional JavaScript; choose one of the two! -->
+    <!-- Optional JavaScript -->
     <!-- AOS -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
@@ -218,7 +264,6 @@
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-<<<<<<< HEAD
     <script>
       const scriptURL = "https://script.google.com/macros/s/AKfycbzWZJCZSD_coYPBMtL6dPVGA8Gf1EopnGZmYnheqUZ1klKio4Ajk6Rg2zQzYLznMkBkng/exec";
       const form = document.forms["contact-form"];
@@ -246,7 +291,5 @@
           .catch((error) => console.error("Error!", error.message));
       });
     </script>
-=======
->>>>>>> 483cd6d (Perubahan AOS & GSAP)
   </body>
 </html>
