ganti warna button

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                 <label for="message" class="form-label">Message</label>
                 <textarea class="form-control" id="message" rows="3" name="pesan"></textarea>
               </div>
-              <button type="submit" class="btn btn-success btn-kirim" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="400">Kirim</button>
+              <button type="submit" class="btn btn-warning btn-kirim" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="400">Kirim</button>
               <button class="btn btn-success btn-loading d-none" type="button" disabled>
                 <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
                 Loading...
