--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 class="card-img-top img-thumbnail"
               ></iframe>
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Wisata Curug Halimun</p>
               </div>
             </div>
           </div>
@@ -165,7 +165,7 @@
                 class="card-img-top img-thumbnail"
               ></iframe>
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Touring Amanah Rabbaniah Crew</p>
               </div>
             </div>
           </div>
@@ -182,7 +182,7 @@
                 class="card-img-top img-thumbnail"
               ></iframe>
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Video Dokumentasi Pernikahan</p>
               </div>
             </div>
           </div>
