--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-md-4 fs-5 text-center" data-aos="fade-right" data-aos-duration="2000">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus quia et suscipit earum amet ipsam nihil itaque tempora beatae temporibus.</p>
+            <p>Seseorang dengan kemampuan yang datang dari rasa ingin tau, yang berwujud menjadi ingin bisa. hingga terciptalah beberapa karya.</p>
           </div>
           <div class="col-md-4 fs-5 text-center" data-aos="fade-left" data-aos-duration="1000">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas voluptates repellendus eius distinctio ducimus optio quam quasi iure velit tempora.</p>
+            <p>Setidaknya dari rasa ingin bisa itu tercipta : "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas voluptates repellendus eius distinctio ducimus optio quam quasi iure velit tempora". Ga usah terlalu serius bacanya, hehe.</p>
           </div>
         </div>
       </div>
@@ -103,7 +103,7 @@
             <div class="card">
               <img src="img/card-1.jpg" class="card-img-top img-thumbnail" alt="Garut" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Foto Otomotif berlatar Gunung Cikuray</p>
               </div>
             </div>
           </div>
@@ -111,7 +111,7 @@
             <div class="card">
               <img src="img/card-2.jpg" class="card-img-top img-thumbnail" alt="Soreang" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Foto Arsitektur Unik</p>
               </div>
             </div>
           </div>
@@ -119,7 +119,7 @@
             <div class="card">
               <img src="img/card-3.jpg" class="card-img-top img-thumbnail" alt="Pangalengan" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Foto Pesona Wisata Alam Wayang Windu</p>
               </div>
             </div>
           </div>
