--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <p>Seseorang dengan kemampuan yang datang dari rasa ingin tau, yang berwujud menjadi ingin bisa. hingga terciptalah beberapa karya.</p>
           </div>
           <div class="col-md-4 fs-5 text-center" data-aos="fade-left" data-aos-duration="1000">
-            <p>Setidaknya dari rasa ingin bisa itu tercipta : "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas voluptates repellendus eius distinctio ducimus optio quam quasi iure velit tempora". Ga usah terlalu serius bacanya, hehe.</p>
+            <p>Salah satu karyanya adalah : "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas voluptates repellendus eius distinctio ducimus optio quam quasi iure velit tempora". Ga usah terlalu serius bacanya, hehe.</p>
           </div>
         </div>
       </div>
